--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>An E-learning Request</title>
     <meta http-equiv="Permissions-Policy" content="microphone=(self)">
 </head>
-<body style="margin: 0; padding: 0; background-color: #FFE360 !important; color: #000000 !important; font-family: sans-serif; height: 100vh; width: 100vw; overflow: hidden;">
-
+<body style="margin: 0; padding: 0; background-color: #1a1a1a !important; color: #ffffff !important; font-family: 'Helvetica Neue', Arial, sans-serif; height: 100vh; width: 100vw; overflow: hidden;">
     <div style="height: 60px; width: 100%;"></div>
 
     <div style="display: flex; width: 100%; height: calc(100% - 60px);">
