--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 After some pushing, you found time on your shared calendars before you started developing the course.
             </p>
             
-            <p style="color: #000; font-size: 18px; font-weight: bold; line-height: 1.6; border-top: 2px solid #000; pt: 20px; padding-top: 20px;">
+            <p style="color: #000; font-size: 18px; font-weight: bold; line-height: 1.6; padding-top: 20px;">
                 Try to ask her as much as possible to create a successful course.
             </p>
         </div>
