--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div style="height: 80px; width: 100%; border-bottom: 1px solid #333;">
         <div style="padding: 25px 60px; font-size: 14px; color: #888; letter-spacing: 1px; text-transform: uppercase;">
-            E-Learning Module: Stakeholder Interview
+            AI Agent Stakeholder Interview
         </div>
     </div>
 
