--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 
                 <div style="background-color: #262626; padding: 30px; border-left: 4px solid #FFE360; border-radius: 4px; box-shadow: 0 4px 15px rgba(0,0,0,0.3);">
                     <p style="margin: 0; font-size: 19px; font-weight: bold; color: #ffffff; line-height: 1.4;">
-                        <span style="color: #FFE360;">Objective:</span> Interview the Director. Uncover the real needs behind the request.
+                        <span style="color: #FFE360;">Objective:</span> Interview the Director and collect all information you need to start building the e-learning.
                     </p>
                 </div>
             </div>
